--- a/book/index.html
+++ b/book/index.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="light dark">
-    <link rel="stylesheet" href="https://julialittlefair.github.io/css/pico.css">
-    <link rel="stylesheet" href="https://julialittlefair.github.io/css/pico.colors.css">
+    <link rel="stylesheet" href="https://stuartlittlefair.github.io/julialittlefair//css/pico.css">
+    <link rel="stylesheet" href="https://stuartlittlefair.github.io/julialittlefair//css/pico.colors.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         .hero {
@@ -25,11 +25,11 @@
             <ul>
             </ul>
             <ul>
-                <li><a href="https://julialittlefair.github.io"><i class="fa fa-home"></i></a></li>
-                <li><a href="https://julialittlefair.github.io/about/">About Me</a></li>
-                <li><a href="https://julialittlefair.github.io/reviews/">Reviews</a></li>
-                <li><a href="https://julialittlefair.github.io/inclusivity/">Inclusivity</a></li>
-                <li><a href="https://julialittlefair.github.io/book/">Contact</a></li>
+                <li><a href="https://stuartlittlefair.github.io/julialittlefair/"><i class="fa fa-home"></i></a></li>
+                <li><a href="https://stuartlittlefair.github.io/julialittlefair//about/">About Me</a></li>
+                <li><a href="https://stuartlittlefair.github.io/julialittlefair//reviews/">Reviews</a></li>
+                <li><a href="https://stuartlittlefair.github.io/julialittlefair//inclusivity/">Inclusivity</a></li>
+                <li><a href="https://stuartlittlefair.github.io/julialittlefair//book/">Contact</a></li>
             </ul>
         </nav>
         <div class="container">
