--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="light dark">
-    <link rel="stylesheet" href="https://stuartlittlefair.github.io/julialittlefair//css/pico.css">
-    <link rel="stylesheet" href="https://stuartlittlefair.github.io/julialittlefair//css/pico.colors.css">
+    <link rel="stylesheet" href="https://www.julialittlefair.uk/css/pico.css">
+    <link rel="stylesheet" href="https://www.julialittlefair.uk/css/pico.colors.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         .hero {
@@ -25,11 +25,11 @@
             <ul>
             </ul>
             <ul>
-                <li><a href="https://stuartlittlefair.github.io/julialittlefair/"><i class="fa fa-home"></i></a></li>
-                <li><a href="https://stuartlittlefair.github.io/julialittlefair//about/">About Me</a></li>
-                <li><a href="https://stuartlittlefair.github.io/julialittlefair//reviews/">Reviews</a></li>
-                <li><a href="https://stuartlittlefair.github.io/julialittlefair//inclusivity/">Inclusivity</a></li>
-                <li><a href="https://stuartlittlefair.github.io/julialittlefair//book/">Contact</a></li>
+                <li><a href="https://www.julialittlefair.uk"><i class="fa fa-home"></i></a></li>
+                <li><a href="https://www.julialittlefair.uk/about/">About Me</a></li>
+                <li><a href="https://www.julialittlefair.uk/reviews/">Reviews</a></li>
+                <li><a href="https://www.julialittlefair.uk/inclusivity/">Inclusivity</a></li>
+                <li><a href="https://www.julialittlefair.uk/book/">Contact</a></li>
             </ul>
         </nav>
         <div class="container">
@@ -122,7 +122,7 @@
     <p>Most of all, I hope you will find my English lessons really enjoyable and fun!</p>
     <h4>Inclusive English classes</h4>
     <p>If you are neurodivergent and you feel comfortable telling me, please do so. I can try to make sure the environment (noise,
-        lighting) and the way we work together is best for you. See <a href="https://stuartlittlefair.github.io/julialittlefair//inclusivity">inclusivity page</a> for
+        lighting) and the way we work together is best for you. See <a href="https://www.julialittlefair.uk/inclusivity">inclusivity page</a> for
         more details.</p>
 </section>
 
