--- a/book/index.html
+++ b/book/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-    <article class="hero pico-background-sand-50">
+    <article class="hero pico-background-azure-50">
         <nav class="container">
             <ul>
             </ul>
