--- a/src/index.html
+++ b/src/index.html
@@ -23,13 +23,13 @@ layout: 'layouts/page.html'
         <div>
             <article>
                 <header class="pico-background-grey-50">
-                    <h4>Taster Session</h4>
+                    <h4>Taster Session (0.5 hr)</h4>
                 </header>
                 <p>You can meet me <strong>in Sheffield or online</strong>, and ask me any questions you have about
-                    your <strong>English</strong> classes.
+                    your English classes.
                 </p>
                 <p>
-                    This taster <strong>English class</strong> is free, and you have no obligation to start taking English
+                    This taster English class is free, and you have no obligation to start taking English
                     lessons if you decide you don't want to after meeting me.
                 </p>
                 <footer class="pico-background-blue-50">Free!</footer>
@@ -41,7 +41,7 @@ layout: 'layouts/page.html'
                     <h4>Simple English conversation class</h4>
                 </header>
                 <p>If you would just like to practise speaking with a native English speaker, this
-                    <strong>English</strong> class is for you.
+                    English class is for you.
                 </p>
                 <p>
                     I will bring something for us to talk about (e.g. an article to read together, photos
@@ -61,10 +61,8 @@ layout: 'layouts/page.html'
 
                 <p>A one-hour English class covering all four skills (reading, writing, speaking,
                     listening).</p>
-                <p>We will also do pronunciation, vocabulary and grammar exercises <strong>
-                        to
-                        help you learn English
-                    </strong>. I can give you homework to do if you have time.
+                <p>We will also do pronunciation, vocabulary and grammar exercises
+                    to help you learn English. I can give you homework to do if you have time.
                 </p>
                 <footer class="pico-background-orange-50">£45 per hour</footer>
             </article>
