--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@ layout: 'layouts/page.html'
     <div class=" grid">
         <div>
             <article>
-                <header class="pico-background-grey-50">
+                <header class="pico-background-grey-100">
                     <h4>Taster Session (0.5 hr)</h4>
                 </header>
                 <p>You can meet me <strong>in Sheffield or online</strong>, and ask me any questions you have about
@@ -32,12 +32,12 @@ layout: 'layouts/page.html'
                     This taster English class is free, and you have no obligation to start taking English
                     lessons if you decide you don't want to after meeting me.
                 </p>
-                <footer class="pico-background-blue-50">Free!</footer>
+                <footer class="pico-background-blue-100">Free!</footer>
             </article>
         </div>
         <div>
             <article>
-                <header class="pico-background-grey-50">
+                <header class="pico-background-grey-100">
                     <h4>Simple English conversation class</h4>
                 </header>
                 <p>If you would just like to practise speaking with a native English speaker, this
@@ -55,7 +55,7 @@ layout: 'layouts/page.html'
 
         <div>
             <article>
-                <header class="pico-background-grey-50">
+                <header class="pico-background-grey-100">
                     <h4>English language class</h4>
                 </header>
 
@@ -64,7 +64,7 @@ layout: 'layouts/page.html'
                 <p>We will also do pronunciation, vocabulary and grammar exercises
                     to help you learn English. I can give you homework to do if you have time.
                 </p>
-                <footer class="pico-background-orange-50">£45 per hour</footer>
+                <footer class="pico-background-orange-100">£45 per hour</footer>
             </article>
         </div>
     </div>
