--- a/src/reviews.html
+++ b/src/reviews.html
@@ -8,20 +8,24 @@ layout: 'layouts/page.html'
     <div class="grid">
         <div>
             <blockquote>
-                "5 stars I had classes with Julia before I left the UK at the back end of 2022 and I
-                was pleased with her. Very professional and and she always made an effort to
-                correct my English. I do highly recommend her to anyone keen to improve their
-                English."
+                ★★★★★
+                <p>"I had classes with Julia before I left the UK at the back end of 2022 and I
+                    was pleased with her. Very professional and and she always made an effort to
+                    correct my English. I do highly recommend her to anyone keen to improve their
+                    English."</p>
                 <footer>— Thomas K.</footer>
             </blockquote>
         </div>
         <div>
             <blockquote>
-                "5 stars I have been having lessons with Julia for four years and the experience has
-                been outstanding. My speaking and listening skills have improved drastically. Julia
-                herself is very friendly and capable of understanding mistakes that carried over
-                from my first language. I highly recommend Julia if you need to improve your
-                English language skills"
+                ★★★★★
+                <p>
+                    "I have been having lessons with Julia for four years and the experience has
+                    been outstanding. My speaking and listening skills have improved drastically. Julia
+                    herself is very friendly and capable of understanding mistakes that carried over
+                    from my first language. I highly recommend Julia if you need to improve your
+                    English language skills"
+                </p>
                 <footer>— Iryna M.</footer>
             </blockquote>
         </div>
