deploy: bbd7d420ad84e71eb6ba206b325b204cfb816ac0

--- a/about/index.html
+++ b/about/index.html
@@ -9,13 +9,7 @@
     <link rel="stylesheet" href="https://www.julialittlefair.uk/css/pico.css">
     <link rel="stylesheet" href="https://www.julialittlefair.uk/css/pico.colors.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        .hero {
-            background-position: center;
-            background-size: cover;
-            height: 200px;
-        }
-    </style>
+    <link rel="stylesheet" href="https://www.julialittlefair.uk/css/custom.css">
 </head>
 
 <body>
