--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
     <link rel="stylesheet" href="https://www.julialittlefair.uk/css/pico.css">
     <link rel="stylesheet" href="https://www.julialittlefair.uk/css/pico.colors.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        .hero {
-            background-position: center;
-            background-size: cover;
-            height: 200px;
-        }
-    </style>
+    <link rel="stylesheet" href="https://www.julialittlefair.uk/css/custom.css">
 </head>
 
 <body>
@@ -62,7 +56,7 @@
     <div class=" grid">
         <div>
             <article>
-                <header class="pico-background-grey-50">
+                <header class="pico-background-grey-100">
                     <h4>Taster Session (0.5 hr)</h4>
                 </header>
                 <p>You can meet me <strong>in Sheffield or online</strong>, and ask me any questions you have about
@@ -72,12 +66,12 @@
                     This taster English class is free, and you have no obligation to start taking English
                     lessons if you decide you don't want to after meeting me.
                 </p>
-                <footer class="pico-background-blue-50">Free!</footer>
+                <footer class="pico-background-blue-100">Free!</footer>
             </article>
         </div>
         <div>
             <article>
-                <header class="pico-background-grey-50">
+                <header class="pico-background-grey-100">
                     <h4>Simple English conversation class</h4>
                 </header>
                 <p>If you would just like to practise speaking with a native English speaker, this
@@ -95,7 +89,7 @@
 
         <div>
             <article>
-                <header class="pico-background-grey-50">
+                <header class="pico-background-grey-100">
                     <h4>English language class</h4>
                 </header>
 
@@ -104,7 +98,7 @@
                 <p>We will also do pronunciation, vocabulary and grammar exercises
                     to help you learn English. I can give you homework to do if you have time.
                 </p>
-                <footer class="pico-background-orange-50">£45 per hour</footer>
+                <footer class="pico-background-orange-100">£45 per hour</footer>
             </article>
         </div>
     </div>
