4 classes and vertically equal sized cards

--- a/src/index.html
+++ b/src/index.html
@@ -19,56 +19,81 @@ layout: 'layouts/page.html'
     <h2>Prices</h2>
     <div class="grid">
     </div>
-    <div class=" grid">
+    <div class="grid">
         <div>
             <article>
                 <header class="pico-background-grey-100">
                     <h4>Taster Session (0.5 hr)</h4>
                 </header>
-                <p>You can meet me <strong>in Sheffield or online</strong>, and ask me any questions you have about
-                    your English classes.
-                </p>
-                <p>
-                    This taster English class is free, and you have no obligation to start taking English
-                    lessons if you decide you don't want to after meeting me.
-                </p>
+                <div>
+                    <p>You can meet me <strong>in Sheffield or online</strong>, and ask me any questions you have about
+                        your English classes.
+                    </p>
+                    <p>
+                        This taster English class is free, and you have no obligation to start taking English
+                        lessons if you decide you don't want to after meeting me.
+                    </p>
+                </div>
                 <footer class="pico-background-blue-100">Free!</footer>
             </article>
         </div>
         <div>
             <article>
                 <header class="pico-background-grey-100">
-                    <h4>Simple English conversation class</h4>
+                    <h4>Speaking Practice</h4>
                 </header>
-                <p>If you would just like to practise speaking with a native English speaker, this
-                    English class is for you.
-                </p>
-                <p>
-                    I will bring something for us to talk about (e.g. an article to read together, photos
-                    to talk about together or a quiz). I will correct your mistakes during the English
-                    lesson, but I will not give you any formal grammar, reading or writing exercises or
-                    homework.
-                </p>
+                <div>
+                    <p>
+                        If you would like to practise speaking with a native English speaker, this English class is for you. Are
+                        you in the UK on holiday, and would like to use your English? Or do you need practice speaking, but
+                        you don’t like formal lessons? Then this option is for you.
+                    </p>
+                    <p>
+                        We will spend the whole hour speaking so you get as much practice as possible. I will not bring any
+                        materials or exercises (but if you would like to, please do!).
+                    </p>
+                </div>
+                <footer class="pico-background-indigo-50">£20 per hour</footer>
+            </article>
+        </div>
+    </div>
+    <div class="grid">
+        <div>
+            <article>
+                <header class="pico-background-grey-100">
+                    <h4>English conversation class</h4>
+                </header>
+                <div>
+                    <p>
+                        In this class, we will speak for the full hour, but I will bring something
+                        for us to talk about (e.g. an article to read together, photos to talk about
+                        together or a quiz).
+                    </p>
+                    <p>I will correct your mistakes during the English lesson, but I
+                        will not give you any formal grammar, reading or writing exercises or homework.
+                    </p>
+                </div>
                 <footer class="pico-background-jade-50">£35 per hour</footer>
             </article>
         </div>
-
         <div>
             <article>
                 <header class="pico-background-grey-100">
                     <h4>English language class</h4>
                 </header>
-
-                <p>A one-hour English class covering all four skills (reading, writing, speaking,
-                    listening).</p>
-                <p>We will also do pronunciation, vocabulary and grammar exercises
-                    to help you learn English. I can give you homework to do if you have time.
-                </p>
+                <div>
+                    <p>A one-hour English class covering all four skills (reading, writing, speaking,
+                        listening).</p>
+                    <p>We will also do pronunciation, vocabulary and grammar exercises
+                        to help you learn English. I can give you homework to do if you have time.
+                    </p>
+                </div>
                 <footer class="pico-background-orange-100">£45 per hour</footer>
             </article>
         </div>
     </div>
 </section>
+
 <section>
     <h2>What will my English class be like?</h2>
     <p>During your English class, I can provide topics to talk about or we can simply chat
